@@ -7,7 +7,6 @@ Version 1.0 BETA
     - window open function
     - Valve protection (CyCL)
     - hourbar line
-    - read/write ee_timers directly from EEPROM / save 128 bytes in RAM
     - default setting restore
     - improve doxygen comments
     - user documentation generated by doxygen 
